# mintdb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
lib/: Cargo.toml  README.md
lib/src/: lib.rs
lib/src/auth/: mod.rs
lib/src/auth/iam/: mod.rs
lib/src/auth/iam/user/: mod.rs  signin.rs
lib/src/auth/req/: mod.rs
lib/src/auth/rule/: delete.rs  mod.rs  read.rs  write.rs
lib/src/auth/schema/: mod.rs
lib/src/auth/token/: mod.rs
lib/src/auth/token/api/: mod.rs
lib/src/auth/token/jwt/: mod.rs
lib/src/db/: mod.rs
lib/src/db/exe/: mod.rs
lib/src/db/read/: mod.rs
lib/src/db/write/: mod.rs
lib/src/dev/: mod.rs
lib/src/doc/read/: compare.rs  get.rs  mod.rs  search.rs
lib/src/doc/write/: create.rs  delete.rs  insert.rs  merge.rs  mod.rs  push.rs  put.rs
lib/src/err/: mod.rs
lib/src/fs/: mod.rs
lib/src/fs/ds/read/: mod.rs
lib/src/fs/ds/write/: mod.rs
lib/src/fs/log/: read.rs  write.rs
lib/src/graph/: bfs.rs  dfs.rs  mod.rs  node.rs
lib/src/kvs/: document.rs  mod.rs  store.rs  table.rs
lib/src/prelude/: mod.rs
lib/src/rule/: mod.rs
lib/src/schema/: mod.rs
lib/src/table/read/: get.rs
lib/src/table/write/: create.rs  delete.rs
lib/src/tx/: mod.rs
lib/src/tx/op/: mod.rs
lib/src/tx/txn/: mod.rs
lib/src/tx/write/: create.rs  delete.rs  insert.rs  merge.rs  mod.rs  push.rs  put.rs  update.rs
lib/src/tx/write/acct/: credit.rs  debit.rs  mod.rs
lib/src/util/: mod.rs  time.rs
lib/src/util/verify/: check_key.rs  mod.rs
lib/tests/: mod.rs
lib/tests/auth/: mod.rs
lib/tests/auth/iam/: api.rs  mod.rs  user.rs
lib/tests/db/: mod.rs
lib/tests/db/read/: mod.rs
lib/tests/db/write/: mod.rs
lib/tests/fs/: mod.rs
lib/tests/fs/ds/: mod.rs
lib/tests/fs/log/: mod.rs  read.rs  write.rs
lib/tests/graph/: bfs.rs  dfs.rs  mod.rs  node.rs
lib/tests/tx/: acct.rs  create.rs  merge.rs  mod.rs
src/: main.rs
src/api/: auth.rs  health.rs  mod.rs  publish.rs  register.rs  sql.rs  ws.rs
src/cli/: config.rs  mod.rs  start.rs
src/cnf/: mod.rs
src/db/: mod.rs
src/err/: mod.rs
src/models/: client.rs  event.rs  mod.rs
src/models/http/: mod.rs  register.rs  sql.rs  topic.rs
src/net/: auth.rs  health.rs  mod.rs  publish.rs  register.rs  sql.rs  ui.rs  ws.rs
src/ui/: index.html
src/ui/static/css/: styles.css
src/ui/static/js/: index.js
src/ui/static/js/lib/: component.js  mint.js  pubsub.js
src/ui/static/js/router/: Router.js
src/ui/static/js/store/: actions.js  index.js  mutations.js  state.js  store.js
src/ui/static/js/views/layout/nav/: Navbar.js
src/ui/static/js/views/layout/sidebar/: Sidebar.js
src/ui/static/js/views/pages/auth/: AuthView.js
src/ui/static/js/views/pages/auth/tb/: AuthTable.js
src/ui/static/js/views/pages/db/: DatabaseView.js
src/ui/static/js/views/pages/db/doc/: DocumentDetail.js  DocumentList.js  KVContainer.js
src/ui/static/js/views/pages/db/tb/: TableDetail.js  TableHeader.js  TableIndex.js  TableList.js
src/ui/static/js/views/pages/info/: InfoView.js
src/ui/static/js/views/pages/pg/: PlaygroundView.js
src/ui/static/js/views/pages/pg/sql/: SQLInput.js  SQLPanel.js  SQLResponse.js
src/ui/static/js/views/pages/pg/ws/: WSSubscriptionList.js  WebSocketInput.js  WebSocketPanel.js  WebSocketResponse.js
src/ui/static/js/views/pages/settings/: SettingsView.js
