[package]
name = "mintdb-server"
version = "0.1.0-beta.1"
edition = "2021"
authors = ["ericmrodriguez7@gmail.com"]
readme = "../README.md"
description = "MintDB is an open source document based database built in Rust."
license = "MIT"
keywords = ["database", "mintdb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["lib"]

[dependencies]
futures = "0.3.25"
mintdb = { path = "lib"}
once_cell = "1.16.0"
serde = { version = "1.0.148", features = ["derive", "rc"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["macros", "sync", "rt-multi-thread", "signal"]}
tokio-stream = "0.1.11"
uuid = { version = "1.2.2", features = ["serde", "v4"]}
warp = "0.3.3"
thiserror = "1.0.37"