[package]
name = "mintdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.2.0"
ring = "0.16.20"
serde = { version = "1.0.150", features = ["derive", "rc"] }
serde_cbor = "0.11.2"
serde_json = "1.0.89"
thiserror = "1.0.38"
tokio-fs = "0.1.7"
uuid = { version = "1.2.2", features = ["serde", "v4"]}
#tokio = { version = "1.24.2", features = ["macros", "sync", "rt-multi-thread"] }

[dev-dependencies]
tokio = { version = "1.24.2", features = ["macros", "sync", "rt-multi-thread"] }
