[package]
name = "mintdb"
version = "0.1.0-beta.3"
edition = "2021"
authors = ["Eric Rodriguez <ericmrodriguez7@gmail.com>"]
readme = "README.md"
repository = "https://github.com/erodriguez000/mintdb"
homepage = "https://github.com/erodriguez000/mintdb"
documentation = "https://docs.rs/mintdb/"
description = "MintDB is an open source document based database built in Rust."
license = "MIT"
keywords = ["database", "mintdb"]
include = ["/src"]

[dependencies]
jsonwebtoken = "8.2.0"
ring = "0.16.20"
serde = { version = "1.0.150", features = ["derive", "rc"] }
serde_cbor = "0.11.2"
serde_json = "1.0.89"
thiserror = "1.0.38"
tokio-fs = "0.1.7"
uuid = { version = "1.2.2", features = ["serde", "v4"]}

[dev-dependencies]
tokio = { version = "1.24.2", features = ["macros", "sync", "rt-multi-thread"] }
